--- a/frontend2/src/assets/styles/NewPostButton.module.css
+++ b/frontend2/src/assets/styles/NewPostButton.module.css
@@ -1,23 +1,33 @@
-.new-post-button {
+.newpostbutton {
     position: fixed;
-    bottom: 20px;
+    bottom: 10px;
     right: 20px;
     background-color: #4285f4;
     color: #fff;
     border: none;
     border-radius: 50%;
-    width: 56px;
-    height: 56px;
+    width: 50px;
+    height: 53px;
     font-size: 24px;
     text-align: center;
-    line-height: 56px;
+    /* line-height: 50%; */
     cursor: pointer;
     transition: background-color 0.3s ease, transform 0.3s ease;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    align-items: center;
+    
   }
   
-  .new-post-button:hover {
+  .newpostbutton:hover {
     background-color: #357ae8;
     transform: scale(1.1);
+  }
+
+  .plus{
+    position: absolute;
+    top: 8px;
+    left: 21px;
+    color: #fff;
+    
   }
   
